--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,13 @@ textarea {
  /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
+    position: absolute;
+    top: 0;
+    bottom:: 0;
+    height: 100%;
+    width: 100%;
+}
 
 #tree {
     height: 100%;
